--- a/juegos/burrito-bison/index.html
+++ b/juegos/burrito-bison/index.html
@@ -8,3 +8,11 @@
     <div class="webgl-content">
         <div id="gameContainer" style="width: 100%; height: 100%; margin: auto"></div>
         </div>
+	<div style="display: flex; flex-wrap: wrap; gap: 20px;">
+  <div>
+    <a href="juegos/burrito-bison/index.html">
+      <img src="juegos/burrito-bison/logo.png" alt="Burrito Bison" width="150">
+      <p>Burrito Bison</p>
+    </a>
+  </div>
+</div>
