--- a/index.html
+++ b/index.html
@@ -1,176 +1,90 @@
 <!DOCTYPE html>
-
+<html lang="es">
 <head>
-	<meta charset="utf-8">
-    <meta http-equiv="content-type" content="text/html; charset=UTF8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="#382C2A">
-	<meta name="viewport"
-		content="height=device-height, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui" />
-	<title>Burrito Bison Revenge</title>
-	<link rel="canonical" href="https://ubg89.github.io/BurritoBisonRevenge/" />
-	<script>
-		window.location= "https://ubg89.github.io/BurritoBisonRevenge/";
-	</script>
-	<script type="text/javascript" src="patch/js/poki-sdk-v2.js"></script>
-	<script type="text/javascript" src="./js/loader.js"></script>
-	<style>
-		* {
-			margin: 0;
-			padding: 0;
-		}
-
-		canvas {
-			outline: none
-		}
-
-		html,
-		body,
-		#container {
-			margin: 0;
-			overflow: hidden;
-			width: 100%;
-			height: 100%;
-			background-color: #000;
-		}
-
-		#splash {
-			position: absolute;
-			visibility: hidden;
-			z-index: 10;
-		}
-
-		#splash__image {
-			position: absolute;
-			background-size: contain;
-			background-position: center;
-			background-repeat: no-repeat;
-			background-image: url("assets/todo.jpg");
-			visibility: visible;
-			transition: all 0.5s;
-			z-index: 10;
-		}
-
-		#progress__root {
-			position: absolute;
-		}
-
-		#progress__line {
-			width: 0;
-			height: 100%;
-			transition: all 0.5s;
-		}
-	</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>GK4</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      background: #f4f4f4;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #007bff;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      font-size: 2em;
+    }
+    #search {
+      display: block;
+      margin: 20px auto;
+      padding: 10px;
+      width: 80%;
+      font-size: 1em;
+    }
+    .game-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      padding: 20px;
+    }
+    .game-card {
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      width: 180px;
+      text-align: center;
+      text-decoration: none;
+      color: black;
+      transition: transform 0.2s;
+    }
+    .game-card:hover {
+      transform: scale(1.05);
+    }
+    .game-card img {
+      width: 100%;
+      border-top-left-radius: 8px;
+      border-top-right-radius: 8px;
+    }
+    .game-card p {
+      padding: 10px;
+      margin: 0;
+    }
+  </style>
 </head>
-
 <body>
-	<div id="splash__image">
-		<div id="progress__root">
-			<div id="progress__line"></div>
-		</div>
-	</div>
+  <header>GK4</header>
+  <input type="text" id="search" placeholder="Buscar juegos...">
 
-	<script>
+  <div class="game-grid" id="gameGrid">
+    <a href="juegos/burrito-bison/index.html" class="game-card">
+      <img src="juegos/burrito-bison/logo.png" alt="Burrito Bison">
+      <p>Burrito Bison</p>
+    </a>
+    <a href="juegos/otro-juego/index.html" class="game-card">
+      <img src="juegos/otro-juego/logo.png" alt="Otro Juego">
+      <p>Otro Juego</p>
+    </a>
+    <!-- Agrega más juegos aquí copiando y pegando -->
+  </div>
 
-		window.addEventListener("load", () => {
+  <script>
+    const searchInput = document.getElementById("search");
+    const gameGrid = document.getElementById("gameGrid");
 
+    searchInput.addEventListener("input", function () {
+      const filter = searchInput.value.toLowerCase();
+      const cards = gameGrid.querySelectorAll(".game-card");
 
-
-			PokiSDK.init().then(
-				() => {
-					// successfully initialized
-					onPokiInitComplete(false);
-				}
-			).catch(
-				() => {
-					// successfully initialized but the user has adblock
-					onPokiInitComplete(true);
-				}
-			);
-
-			let config;
-
-
-config = {
-    "title": "Burrito Bison Revenge",
-    "filename": "burritobisonrevenge_sdk",
-    "pokiSDK": true,
-    "debugPoki": false,
-    "showFPS": false,
-    "debug": false,
-    "splash": "assets/todo.jpg",
-    "start": null,
-    "width": 720,
-    "height": 480,
-    "x": 0,
-    "y": 0,
-    "w": "100%",
-    "h": "100%",
-    "stageScaleMode": null,
-    "stageAlign": null,
-    "progressParserWeigth": 1,
-    "progress": {
-        "direction": "lr",
-        "back": "#fcce45",
-        "line": "#cf561b",
-        "rect": [
-            0.25,
-            0.65,
-            0.5,
-            0.01
-        ]
-    },
-    "skipFramesOfScene": null,
-    "buttonPokiSDKActions": null,
-    "retryButtonIDS": null,
-    "retryButtonAction": null,
-    "actionOnStop": null,
-    "actionWhenRetryButtonEncountered": null,
-    "filenameNoSdk": "burritobisonrevenge",
-    "binary": [
-        {
-            "name": "fonts.swf",
-            "path": "assets/fonts.swf",
-            "size": 30506
-        },
-        {
-            "name": "burritobisonrevenge_sdk",
-            "path": "assets/burritobisonrevenge_sdk.swf",
-            "size": 9012628,
-            "resourceType": "GAME"
-        }
-    ],
-    "runtime": "js/JuicyBeast.js"
-};
-
-
-			PokiSDK.setDebug(config.debugPoki);
-
-			Loader.init(config);
-
-			let onPokiInitComplete = (adBlocked) => {
-
-				PokiSDK.adBlocked = adBlocked;
-				PokiSDK.gameLoadingStart();
-
-				Loader.runGame((fill) => {
-					PokiSDK.gameLoadingProgress({
-						percentageDone: fill,
-						kbLoaded: 0,
-						kbTotal: 0,
-						fileNameLoaded: "",
-						filesLoaded: 0,
-						filesTotal: 0
-					});
-				}, (instance) => {
-					PokiSDK.gameLoadingFinished();
-				})
-			}
-		})
-
-	</script>
-	<script src="../js/analytics_ubg_v1_4.js"></script>
+      cards.forEach(card => {
+        const text = card.innerText.toLowerCase();
+        card.style.display = text.includes(filter) ? "" : "none";
+      });
+    });
+  </script>
 </body>
-
 </html>
