--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <div class="game-grid" id="gameGrid">
     <a href="Build/index.html" class="game-card">
-      <img src="juegos/images/progressFull.Dark.png" alt="Burrito Bison">
+      <img src="juegos/images/progressFull.Light.png" alt="Burrito Bison">
       <p>Burrito Bison</p>
     </a>
     <a href="juegos/otro-juego/index.html" class="game-card">
