--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <input type="text" id="search" placeholder="Buscar juegos...">
 
   <div class="game-grid" id="gameGrid">
-    <a href="Build/index.html" class="game-card">
+    <a href="build/index.html" class="game-card">
       <img src="juegos/images/progressFull.Light.png" alt="Burrito Bison">
       <p>Burrito Bison</p>
     </a>
