--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@
   <header>GK4</header>
   <input type="text" id="search" placeholder="Buscar juegos...">
 
-  <div class="game-grid" id="gameGrid">
-    <a href="build/index.html" class="game-card">
-      <img src="juegos/images/progressFull.Light.png" alt="Burrito Bison">
-      <p>Burrito Bison</p>
-    </a>
+ <div class="game-grid" id="gameGrid">
+  <a href="juegos/burrito-bison/" class="game-card">
+    <img src="juegos/burrito-bison/logo.png" alt="Burrito Bison">
+    <span>Burrito Bison</span>
+  </a>
+</div>
     <a href="juegos/otro-juego/index.html" class="game-card">
       <img src="juegos/otro-juego/logo.png" alt="Otro Juego">
       <p>Otro Juego</p>
