--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <input type="text" id="search" placeholder="Buscar juegos...">
 
  <div class="game-grid" id="gameGrid">
-  <a href="build/" class="game-card">
+  <a href="Build/" class="game-card">
     <img src="juegos/burrito-bison/logo.png" alt="Burrito Bison">
     <span>Burrito Bison</span>
   </a>
