--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
   <input type="text" id="search" placeholder="Buscar juegos...">
 
  <div class="game-grid" id="gameGrid">
-  <a href="2048-master/" class="game-card">
+  <a href="2048-master/index.html" class="game-card">
     <img src="juegos/burrito-bison/logo.png" alt="Burrito Bison">
-    <span>Burrito Bison</span>
+    <span>2048</span>
   </a>
 </div>
     <a href="juegos/otro-juego/index.html" class="game-card">
