--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
  <div class="game-grid" id="gameGrid">
   <a href="2048-master/index.html" class="game-card">
-    <img src="juegos/burrito-bison/logo.png" alt="Burrito Bison">
+    <img src="2048-master/" alt="2048">
     <span>2048</span>
   </a>
 </div>
