--- a/index.html
+++ b/index.html
@@ -71,7 +71,13 @@
       <p>Otro Juego</p>
     </a>
     <!-- Agrega más juegos aquí copiando y pegando -->
-  </div>
+  <div>
+   <div class="game-grid" id="gameGrid">
+  <a href="Slope-Source-code-main/index.html" class="game-card">
+    <img src="2048-master/favicon.ico" alt="SLOPE">
+    <span>GAME</span>
+  </a>
+ <div>
 
   <script>
     const searchInput = document.getElementById("search");
