--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     <!-- Agrega más juegos aquí copiando y pegando -->
   <div>
    <div class="game-grid" id="gameGrid">
-  <a href="Slope-Source-code-main/index.html" class="game-card">
-    <img src="2048-master/favicon.ico" alt="SLOPE">
-    <span>GAME</span>
+  <a href="Slope-Source-code-main/TemplateData/OIP.jpg" class="game-card">
+    <img src="Slope-Source-code-main/index.html" alt="SLOPE">
+    <span>SLOPE</span>
   </a>
  <div>
 
