--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!-- Agrega más juegos aquí copiando y pegando -->
   <div>
    <div class="game-grid" id="gameGrid">
-  <a href="Slope-Source-code-main/TemplateData/OIP.png" class="game-card">
+  <a href="Slope-Source-code-main/TemplateData/OIP.ico" class="game-card">
     <img src="Slope-Source-code-main/index.html" alt="SLOPE">
     <span>SLOPE</span>
   </a>
