--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <style>
     body {
       font-family: sans-serif;
-      background: #f4f4f4;
       margin: 0;
       padding: 0;
+      background: url('fondo.jpg') no-repeat center center fixed;
+      background-size: cover;
     }
     header {
       background: #007bff;
