--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: sans-serif;
       margin: 0;
       padding: 0;
-      background: url('OIP (1).jpg') no-repeat center center fixed;
+      background: url('bancoalimentos3.jpg') no-repeat center center fixed;
       background-size: cover;
     }
     header {
