--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     <!-- Agrega más juegos aquí copiando y pegando -->
   <div>
    <div class="game-grid" id="gameGrid">
-  <a href="Slope-Source-code-main/TemplateData/OIP.ico" class="game-card">
-    <img src="Slope-Source-code-main/index.html" alt="SLOPE">
+  <a href="Slope-Source-code-main/index.html" class="game-card">
+    <img src="Slope-Source-code-main/TemplateData/OIP.ico" alt="SLOPE">
     <span>SLOPE</span>
   </a>
  <div>
