--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>GK4</title>
+  <title>Centro de Juegos Colegio La Vaguada por Antonio Macian</title>
   <style>
     body {
       font-family: sans-serif;
