--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
     <span>SLOPE</span>
   </a>
  <div>
+   <div class="game-grid" id="gameGrid">
+  <a href="BurritoBison-main/index.html" class="game-card">
+    <img src="burrito.jpg" alt="SLOPE">
+    <span>SLOPE</span>
+  </a>
+ <div>
 
   <script>
     const searchInput = document.getElementById("search");
