--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
   </a>
  <div>
    <div class="game-grid" id="gameGrid">
-  <a href="BurritoBison-main/index.html" class="game-card">
-    <img src="burrito.jpg" alt="SLOPE">
-    <span>SLOPE</span>
+  <a href="BurritoBison-main/" class="game-card">
+    <img src="burrito.jpg" alt="Burrito">
+    <span>Burrito</span>
   </a>
  <div>
 
