--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
  <div>
    <div class="game-grid" id="gameGrid">
   <a href="BurritoBison-main/" class="game-card">
-    <img src="burrito.jpg" alt="Burrito">
+    <img src="BurritoBison-main/images/burrito-png.png" alt="Burrito">
     <span>Burrito</span>
   </a>
  <div>
