--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
     <span>Burrito</span>
   </a>
  <div>
+ <div>
+   <div class="game-grid" id="gameGrid">
+  <a href="drive-mad-main/" class="game-card">
+    <img src="drive-mad-main/webapp/cover.jpg" alt="Drive MAD">
+    <span>Drive MAD</span>
+  </a>
+ <div>
 
   <script>
     const searchInput = document.getElementById("search");
