--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
     <span>Drive MAD</span>
   </a>
  <div>
+   <div>
+   <div class="game-grid" id="gameGrid">
+  <a href="moto-x3m-main/" class="game-card">
+    <img src="bancoalimentos3.jpg" alt="MOTOR">
+    <span>MOTOR X3M</span>
+  </a>
+ <div>
 
   <script>
     const searchInput = document.getElementById("search");
