--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </style>
 </head>
 <body>
-  <header>GK4</header>
+  <header>unblocked games</header>
   <input type="text" id="search" placeholder="Buscar juegos...">
 
  <div class="game-grid" id="gameGrid">
@@ -88,7 +88,7 @@
  <div>
    <div>
    <div class="game-grid" id="gameGrid">
-  <a href="moto-x3m-main/" class="game-card">
+  <a href="moto-x3m-main/index.htlm" class="game-card">
     <img src="bancoalimentos3.jpg" alt="MOTOR">
     <span>MOTOR X3M</span>
   </a>
