--- a/index.html
+++ b/index.html
@@ -1,72 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GK4 - Juegos</title>
   <style>
+    /* Fondo animado estilo galáctico */
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: black;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: radial-gradient(#000000, #0f0f0f);
       color: white;
-      background-image: url('https://www.transparenttextures.com/patterns/dark-mosaic.png');
+      background-image: url("https://i.imgur.com/sRzY56a.png"); /* fondo decorativo */
+      background-size: cover;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
     }
+
     h1 {
       text-align: center;
-      margin-top: 20px;
+      margin: 30px 0 10px 0;
       font-size: 3em;
+      color: white;
+      text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px #00fff2;
     }
+
     .search-container {
       text-align: center;
-      margin: 20px;
+      margin-bottom: 30px;
     }
+
     input[type="text"] {
-      padding: 10px;
-      font-size: 16px;
-      width: 60%;
-      border-radius: 8px;
+      padding: 12px 20px;
+      width: 70%;
+      font-size: 18px;
+      border-radius: 10px;
       border: none;
+      outline: none;
+      background: #1c1c1c;
+      color: white;
+      box-shadow: 0 0 10px #00fff2;
     }
+
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      gap: 25px;
       padding: 20px;
       max-width: 1200px;
       margin: auto;
     }
+
     .game {
-      background: #111;
-      border-radius: 12px;
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 15px;
       overflow: hidden;
       text-align: center;
-      box-shadow: 0 0 10px #00ffcc55;
-      transition: transform 0.3s;
+      box-shadow: 0 0 15px #00fff255;
+      transition: transform 0.2s, box-shadow 0.2s;
     }
+
     .game:hover {
       transform: scale(1.05);
+      box-shadow: 0 0 25px #00fff2aa;
     }
+
     .game img {
       width: 100%;
       height: 150px;
       object-fit: cover;
+      border-bottom: 2px solid #00fff2;
     }
+
     .game-title {
-      padding: 10px;
       font-size: 1.2em;
+      padding: 12px;
+      color: white;
+      text-shadow: 0 0 5px #00fff2;
+    }
+
+    a {
+      color: white;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
 
   <h1>GK4 - Juegos</h1>
+
   <div class="search-container">
-    <input type="text" id="searchInput" placeholder="Buscar juegos..." onkeyup="searchGames()" />
+    <input type="text" id="searchInput" placeholder="Buscar juegos..." onkeyup="searchGames()">
   </div>
 
   <div class="grid" id="gameGrid">
-    <!-- Ejemplo de juego -->
+    <!-- Tarjetas de juegos -->
     <div class="game">
       <a href="games/slope/index.html">
         <img src="images/slope.jpg" alt="Slope">
@@ -85,7 +117,7 @@
         <div class="game-title">Flappy Bird</div>
       </a>
     </div>
-    <!-- Agrega más juegos aquí -->
+    <!-- Agrega más tarjetas copiando el bloque .game -->
   </div>
 
   <script>
