--- a/index.html
+++ b/index.html
@@ -15,7 +15,21 @@
       background-size: cover;
       background-attachment: fixed;
       background-repeat: no-repeat;
+      position: relative;
+      z-index: 0;
     }
+
+    body::before {
+  content: "";
+  position: fixed;
+  inset: 0;
+  background-image: url('images/tu-fondo.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  filter: brightness(0.3) blur(1px);
+  z-index: -1;
+}
 
     h1 {
       text-align: center;
