--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
   <div class="grid" id="gameGrid">
     <!-- Tarjetas de juegos -->
     <div class="game">
-      <a href="games/slope/index.html">
-        <img src="images/slope.jpg" alt="Slope">
+      <a href="Slope-Source-code-main/index.html">
+        <img src="Slope-Source-code-main/TemplateData/OIP.ico" alt="Slope">
         <div class="game-title">Slope</div>
       </a>
     </div>
