--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       background-repeat: no-repeat;
       position: relative;
       z-index: 0;
+      background-image: url('https://imgur.com/Puqmzxi');
     }
 
     body::before {
