--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: radial-gradient(#000000, #0f0f0f);
       color: white;
-      background-image: url("https://imgur.com/Puqmzxi"); /* fondo decorativo */
+      background-image: url(""); /* fondo decorativo */
       background-size: cover;
       background-attachment: fixed;
       background-repeat: no-repeat;
