--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: radial-gradient(#000000, #0f0f0f);
       color: white;
-      background-image: url("pepe.jpg"); /* fondo decorativo */
+      background-image: url("game.jpg"); /* fondo decorativo */
       background-size: cover;
       background-attachment: fixed;
       background-repeat: no-repeat;
@@ -23,7 +23,6 @@
   content: "";
   position: fixed;
   inset: 0;
-  background-image: url('images/tu-fondo.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
