--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       outline: none;
       background: #1c1c1c;
       color: white;
-      box-shadow: 0 0 10px #00fff2;
+      box-shadow: 0 0 10px #FFFFFF;
     }
 
     .grid {
