--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
       </a>
     </div>
     <div class="game">
-      <a href="games/subway/index.html">
-        <img src="images/subway.jpg" alt="Subway Surfers">
+      <a href="Subway-Surfers-master/Subway-Surfers-master/game.htlm">
+        <img src="Subway-Surfers-master/Subway-Surfers-master/assets/R.png" alt="Subway Surfers">
         <div class="game-title">Subway Surfers</div>
       </a>
     </div>
