--- a/index.html
+++ b/index.html
@@ -125,12 +125,16 @@
       </a>
     </div>
     <div class="game">
-      <a href="games/flappy/index.html">
-        <img src="images/flappy.jpg" alt="Flappy Bird">
-        <div class="game-title">Flappy Bird</div>
+      <a href="BurritoBison-main/index.html">
+        <img src="BurritoBison-main/images/burrito-png.png" alt="Burrito Bison">
+        <div class="game-title">Burrito Bison</div>
       </a>
     </div>
-    <!-- Agrega más tarjetas copiando el bloque .game -->
+    <div class="game">
+      <a href="drive-mad-main/index.html">
+        <img src="drive-mad-main/webapp/cover.jpg" alt="Drive Mad">
+        <div class="game-title">Drive Mad</div>
+      </a>
   </div>
 
   <script>
