--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </a>
     </div>
     <div class="game">
-      <a href="Subway-Surfers-master/Subway-Surfers-master/game.htlm">
+      <a href="Subway-Surfers-master/Subway-Surfers-master/game.html">
         <img src="Subway-Surfers-master/Subway-Surfers-master/assets/R.png" alt="Subway Surfers">
         <div class="game-title">Subway Surfers</div>
       </a>
