--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </a>
     </div>
     <div class="game">
-      <a href="Subway-Surfers-master/index.html">
+      <a href="Subway-Surfers/index.html">
         <img src="R.png" alt="Subway Surfers">
         <div class="game-title">Subway Surfers</div>
       </a>
