--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@
         <div class="game-title">Drive Mad</div>
       </a>
   </div>
+     </div>
+    <div class="game">
+      <a href="1v1lol/index.html">
+        <img src="1v1lol/logo.png" alt="1v1.lol">
+        <div class="game-title">1v1.lol</div>
+      </a>
+    </div>
 
   <script>
     function searchGames() {
