--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GK4 - Juegos</title>
   <style>
-    /* Fondo animado estilo galáctico */
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: radial-gradient(#000000, #0f0f0f);
       color: white;
-      background-image: url("game.jpg"); /* fondo decorativo */
+      background-image: url("game.jpg");
       background-size: cover;
       background-attachment: fixed;
       background-repeat: no-repeat;
@@ -20,15 +23,15 @@
     }
 
     body::before {
-  content: "";
-  position: fixed;
-  inset: 0;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  filter: brightness(0.3) blur(1px);
-  z-index: -1;
-}
+      content: "";
+      position: fixed;
+      inset: 0;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      filter: brightness(0.3) blur(1px);
+      z-index: -1;
+    }
 
     h1 {
       text-align: center;
@@ -57,7 +60,7 @@
 
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 25px;
       padding: 20px;
       max-width: 1200px;
@@ -111,7 +114,6 @@
   </div>
 
   <div class="grid" id="gameGrid">
-    <!-- Tarjetas de juegos -->
     <div class="game">
       <a href="Slope-Source-code-main/index.html">
         <img src="Slope-Source-code-main/TemplateData/OIP.ico" alt="Slope">
@@ -135,14 +137,14 @@
         <img src="drive-mad-main/webapp/cover.jpg" alt="Drive Mad">
         <div class="game-title">Drive Mad</div>
       </a>
-  </div>
-     </div>
+    </div>
     <div class="game">
       <a href="1v1lol/index.html">
         <img src="1v1lol/logo.png" alt="1v1.lol">
         <div class="game-title">1v1.lol</div>
       </a>
     </div>
+  </div>
 
   <script>
     function searchGames() {
