--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       </a>
     </div>
     <div class="game">
-      <a href="1v1lol/index.html">
+      <a href="1v1lol/">
         <img src="1v1lol/logo.png" alt="1v1.lol">
         <div class="game-title">1v1.lol</div>
       </a>
