--- a/index.html
+++ b/index.html
@@ -145,6 +145,19 @@
       </a>
     </div>
   </div>
+    <div class="game">
+      <a href="amongus/index.html">
+        <img src="1v1lol/logo.png" alt="among us">
+        <div class="game-title">among us</div>
+      </a>
+    </div>
+  </div>
+    <div class="game">
+      <a href="bitlife/index.html">
+        <img src="bitlife/logo.png" alt="bitlife">
+        <div class="game-title">bitlife</div>
+      </a>
+    </div>
 
   <script>
     function searchGames() {
