--- a/index.html
+++ b/index.html
@@ -158,6 +158,27 @@
         <div class="game-title">bitlife</div>
       </a>
     </div>
+   </div>
+    <div class="game">
+      <a href="driftboss/index.html">
+        <img src="driftboss/branding/logo.png" alt="drift boss">
+        <div class="game-title">drift boss</div>
+      </a>
+    </div>
+  </div>
+    <div class="game">
+      <a href="happywheels/index.html">
+        <img src="happywheels/166950-HUdYLFwSkLSLQIwO.png" alt="happy wheels">
+        <div class="game-title">happy wheels</div>
+      </a>
+    </div>
+   </div>
+    <div class="game">
+      <a href="pacman/index.html">
+        <img src="pacman/sejarah-penciptaan-game-legendaris-pac-man-10aXQ8DlD0.jpg" alt="pacman">
+        <div class="game-title">pacman</div>
+      </a>
+    </div>
 
   <script>
     function searchGames() {
