--- a/amongus/index.html
+++ b/amongus/index.html
@@ -1,33 +1,191 @@
-<html>
-    <head>
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-7FN7LEVWXD"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GK4 - Juegos</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
-          gtag('config', 'G-7FN7LEVWXD');
-        </script>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: radial-gradient(#000000, #0f0f0f);
+      color: white;
+      background-image: url("game.jpg");
+      background-size: cover;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      position: relative;
+      z-index: 0;
+    }
 
-        <meta charset="UTF-8">
-        <title>Among Us | Seraph</title>
-        <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
-        <link rel="shortcut icon" href="../../images/ico.ico">
-        <link rel="stylesheet" href="style.css">
-        <script src="../../storage/js/cloak.js"></script>
-    </head>
-    
-    <body>
-        <noscript>
-            <div id="notSupportedWrap">
-                <h2 id="notSupportedTitle">this game requires javascript</h2>
-                <p class="notSupportedMessage">javascript doesn't seem to be enabled for this website. </p>
-            </div>
-        </noscript>
-        
-        <script src="scripts/supportcheck.js"></script>
-        <script src="scripts/offlineclient.js" type="module"></script>
-        <script src="scripts/main.js" type="module"></script>
-        <script src="scripts/register-sw.js" type="module"></script>
-    </body>
+    body::before {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      filter: brightness(0.3) blur(1px);
+      z-index: -1;
+    }
+
+    h1 {
+      text-align: center;
+      margin: 30px 0 10px 0;
+      font-size: 3em;
+      color: white;
+      text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px #00fff2;
+    }
+
+    .search-container {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    input[type="text"] {
+      padding: 12px 20px;
+      width: 70%;
+      font-size: 18px;
+      border-radius: 10px;
+      border: none;
+      outline: none;
+      background: #1c1c1c;
+      color: white;
+      box-shadow: 0 0 10px #FFFFFF;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 25px;
+      padding: 20px;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    .game {
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 15px;
+      overflow: hidden;
+      text-align: center;
+      box-shadow: 0 0 15px #00fff255;
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+
+    .game:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 25px #00fff2aa;
+    }
+
+    .game img {
+      width: 100%;
+      height: 150px;
+      object-fit: cover;
+      border-bottom: 2px solid #00fff2;
+    }
+
+    .game-title {
+      font-size: 1.2em;
+      padding: 12px;
+      color: white;
+      text-shadow: 0 0 5px #00fff2;
+    }
+
+    a {
+      color: white;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>GK4 - Juegos</h1>
+
+  <div class="search-container">
+    <input type="text" id="searchInput" placeholder="Buscar juegos..." onkeyup="searchGames()">
+  </div>
+
+  <div class="grid" id="gameGrid">
+    <div class="game">
+      <a href="Slope-Source-code-main/index.html">
+        <img src="Slope-Source-code-main/TemplateData/OIP.ico" alt="Slope">
+        <div class="game-title">Slope</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="Subway-Surfers/index.html">
+        <img src="R.png" alt="Subway Surfers">
+        <div class="game-title">Subway Surfers</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="BurritoBison-main/index.html">
+        <img src="BurritoBison-main/images/burrito-png.png" alt="Burrito Bison">
+        <div class="game-title">Burrito Bison</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="drive-mad-main/index.html">
+        <img src="drive-mad-main/webapp/cover.jpg" alt="Drive Mad">
+        <div class="game-title">Drive Mad</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="1v1lol/">
+        <img src="1v1lol/logo.png" alt="1v1.lol">
+        <div class="game-title">1v1.lol</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="amongus/index.html">
+        <img src="1v1lol/logo.png" alt="among us">
+        <div class="game-title">among us</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="bitlife/index.html">
+        <img src="bitlife/logo.png" alt="bitlife">
+        <div class="game-title">bitlife</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="driftboss/index.html">
+        <img src="driftboss/branding/logo.png" alt="drift boss">
+        <div class="game-title">drift boss</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="happywheels/index.html">
+        <img src="happywheels/166950-HUdYLFwSkLSLQIwO.png" alt="happy wheels">
+        <div class="game-title">happy wheels</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="pacman/index.html">
+        <img src="pacman/sejarah-penciptaan-game-legendaris-pac-man-10aXQ8DlD0.jpg" alt="pacman">
+        <div class="game-title">pacman</div>
+      </a>
+    </div>
+  </div>
+
+  <script>
+    function searchGames() {
+      const input = document.getElementById("searchInput").value.toLowerCase();
+      const games = document.querySelectorAll(".game");
+      games.forEach(game => {
+        const title = game.querySelector(".game-title").textContent.toLowerCase();
+        game.style.display = title.includes(input) ? "block" : "none";
+      });
+    }
+  </script>
+
+</body>
 </html>
