--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   </div>
     <div class="game">
       <a href="amongus/index.html">
-        <img src="1v1lol/logo.png" alt="among us">
+        <img src="amongus/images/crewmate3-sheet0.png" alt="among us">
         <div class="game-title">among us</div>
       </a>
     </div>
