--- a/index.html
+++ b/index.html
@@ -144,41 +144,37 @@
         <div class="game-title">1v1.lol</div>
       </a>
     </div>
-  </div>
     <div class="game">
       <a href="amongus/index.html">
-        <img src="amongus/images/crewmate3-sheet0.png" alt="among us">
-        <div class="game-title">among us</div>
+        <img src="amongus/images/crewmate3-sheet0.png" alt="Among Us">
+        <div class="game-title">Among Us</div>
       </a>
     </div>
-  </div>
     <div class="game">
       <a href="bitlife/index.html">
-        <img src="bitlife/logo.png" alt="bitlife">
-        <div class="game-title">bitlife</div>
+        <img src="bitlife/logo.png" alt="BitLife">
+        <div class="game-title">BitLife</div>
       </a>
     </div>
-   </div>
     <div class="game">
       <a href="driftboss/index.html">
-        <img src="driftboss/branding/logo.png" alt="drift boss">
-        <div class="game-title">drift boss</div>
+        <img src="driftboss/branding/logo.png" alt="Drift Boss">
+        <div class="game-title">Drift Boss</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="happywheels/index.html">
+        <img src="happywheels/166950-HUdYLFwSkLSLQIwO.png" alt="Happy Wheels">
+        <div class="game-title">Happy Wheels</div>
+      </a>
+    </div>
+    <div class="game">
+      <a href="pacman/index.html">
+        <img src="pacman/sejarah-penciptaan-game-legendaris-pac-man-10aXQ8DlD0.jpg" alt="Pacman">
+        <div class="game-title">Pacman</div>
       </a>
     </div>
   </div>
-    <div class="game">
-      <a href="happywheels/index.html">
-        <img src="happywheels/166950-HUdYLFwSkLSLQIwO.png" alt="happy wheels">
-        <div class="game-title">happy wheels</div>
-      </a>
-    </div>
-   </div>
-    <div class="game">
-      <a href="pacman/index.html">
-        <img src="pacman/sejarah-penciptaan-game-legendaris-pac-man-10aXQ8DlD0.jpg" alt="pacman">
-        <div class="game-title">pacman</div>
-      </a>
-    </div>
 
   <script>
     function searchGames() {
