--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     <input type="text" id="searchInput" placeholder="Buscar juegos..." onkeyup="searchGames()">
   </div>
 
+  <!-- Contenedor de los juegos (todo dentro de .grid) -->
   <div class="grid" id="gameGrid">
     <div class="game">
       <a href="Slope-Source-code-main/index.html">
@@ -143,11 +144,11 @@
         <img src="1v1lol/logo.png" alt="1v1.lol">
         <div class="game-title">1v1.lol</div>
       </a>
-    
+    </div>
     <div class="game">
       <a href="bitlife/index.html">
-        <img src="bitlife/logo.png" alt="BitLife">
-        <div class="game-title">BitLife</div>
+        <img src="bitlife/logo.png" alt="Bitlife">
+        <div class="game-title">Bitlife</div>
       </a>
     </div>
     <div class="game">
@@ -168,7 +169,13 @@
         <div class="game-title">Pacman</div>
       </a>
     </div>
-  </div>
+    <div class="game">
+      <a href="amongus/index.html">
+        <img src="amongus/images/crewmate3-sheet0.png" alt="Among Us">
+        <div class="game-title">Among Us</div>
+      </a>
+    </div>
+  </div> <!-- Fin del contenedor de juegos -->
 
   <script>
     function searchGames() {
