--- a/index.html
+++ b/index.html
@@ -175,6 +175,20 @@
         <div class="game-title">Among Us</div>
       </a>
     </div>
+    </div>
+    <div class="game">
+      <a href="skibidi1v100/index.html">
+        <img src="skibidi1v100/logo.png" alt="Skibidi 1v100">
+        <div class="game-title">Skibdi 1v100</div>
+      </a>
+    </div>
+  </div>
+    <div class="game">
+      <a href="snowrider3d/index.html">
+        <img src="snowrider3d/sno.png" alt="Snow Rider 3D">
+        <div class="game-title">Snow Rider 3D</div>
+      </a>
+    </div>
   </div> <!-- Fin del contenedor de juegos -->
 
   <script>
