--- a/index.html
+++ b/index.html
@@ -113,7 +113,6 @@
     <input type="text" id="searchInput" placeholder="Buscar juegos..." onkeyup="searchGames()">
   </div>
 
-  <!-- Contenedor de los juegos (todo dentro de .grid) -->
   <div class="grid" id="gameGrid">
     <div class="game">
       <a href="Slope-Source-code-main/index.html">
@@ -175,21 +174,19 @@
         <div class="game-title">Among Us</div>
       </a>
     </div>
-    </div>
     <div class="game">
       <a href="skibidi1v100/index.html">
         <img src="skibidi1v100/logo.png" alt="Skibidi 1v100">
-        <div class="game-title">Skibdi 1v100</div>
+        <div class="game-title">Skibidi 1v100</div>
       </a>
     </div>
-  </div>
     <div class="game">
       <a href="snowrider3d/index.html">
-        <img src="snowrider3d/sno.png" alt="Snow Rider 3D">
+        <img src="snowrider3d/snow.png" alt="Snow Rider 3D">
         <div class="game-title">Snow Rider 3D</div>
       </a>
     </div>
-  </div> <!-- Fin del contenedor de juegos -->
+  </div> <!-- Fin del contenedor de .grid -->
 
   <script>
     function searchGames() {
