--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </div>
     <div class="game">
       <a href="driftboss/index.html">
-        <img src="driftboss/branding/logo.png" alt="Drift Boss">
+        <img src="driftboss/branding/logo1.png" alt="Drift Boss">
         <div class="game-title">Drift Boss</div>
       </a>
     </div>
