--- a/index.html
+++ b/index.html
@@ -180,6 +180,13 @@
         <div class="game-title">Snow Rider 3D</div>
       </a>
     </div>
+    </div>
+    <div class="game">
+      <a href="volleyrandom/index.html">
+        <img src="volleyrandom/splash.png" alt="Volley Random">
+        <div class="game-title">Volley Random</div>
+      </a>
+    </div>
   </div> <!-- Fin del contenedor de .grid -->
 
   <script>
