--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
         <div class="game-title">Volley Random</div>
       </a>
     </div>
+  </div>
   </div> <!-- Fin del contenedor de .grid -->
 
   <script>
