--- a/index.html
+++ b/index.html
@@ -1,142 +1,117 @@
 <!DOCTYPE html>  
 <html lang="es">  
 <head>  
-  <meta charset="UTF-8" />  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
-  <title>CELEX - Juegos</title>  
-  <style>  
-    * {  
-      box-sizing: border-box;  
-    }  
+<meta charset="UTF-8" />  
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />  
+<title>CELEX - Juegos</title>  
+<style>  
+  * {  
+    box-sizing: border-box;  
+  }  
 
-    body {  
-      margin: 0;  
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-      background: radial-gradient(#000000, #0f0f0f);  
-      color: white;  
-      background-image: url("game.jpg");  
-      background-size: cover;  
-      background-attachment: fixed;  
-      background-repeat: no-repeat;  
-      position: relative;  
-      z-index: 0;  
-    }  
+  body {  
+    margin: 0;  
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
+    background: radial-gradient(#000000, #0f0f0f);  
+    color: white;  
+    background-image: url("game.jpg");  
+    background-size: cover;  
+    background-attachment: fixed;  
+    background-repeat: no-repeat;  
+    position: relative;  
+    z-index: 0;  
+  }  
 
-    body::before {  
-      content: "";  
-      position: fixed;  
-      inset: 0;  
-      background-size: cover;  
-      background-position: center;  
-      background-repeat: no-repeat;  
-      filter: brightness(0.3) blur(1px);  
-      z-index: -1;  
-    }  
+  body::before {  
+    content: "";  
+    position: fixed;  
+    inset: 0;  
+    background-size: cover;  
+    background-position: center;  
+    background-repeat: no-repeat;  
+    filter: brightness(0.3) blur(1px);  
+    z-index: -1;  
+  }  
 
-    h1 {  
-      text-align: center;  
-      margin: 30px 0 10px 0;  
-      font-size: 3em;  
-      color: white;  
-      text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px #00fff2;  
-    }  
+  h1 {  
+    text-align: center;  
+    margin: 30px 0 10px 0;  
+    font-size: 3em;  
+    color: white;  
+    text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px #00fff2;  
+  }  
 
-    /* Estilo para el botón neon */  
-    .neon-button {  
-      display: inline-block;  
-      margin: 15px auto;  
-      padding: 8px 15px;  
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-      font-size: 14px;  
-      color: #fff;  
-      border: 2px solid #fff;  
-      border-radius: 8px;  
-      background: transparent;  
-      cursor: pointer;  
-      box-shadow: 0 0 10px #fff, inset 0 0 10px #fff;  
-      transition: all 0.2s ease;  
-    }  
-    .neon-button:hover {  
-      box-shadow: 0 0 20px #fff, inset 0 0 20px #fff;  
-      background: rgba(255,255,255,0.1);  
-    }  
+  /* Estilo para el botón neon */  
+  .neon-button {  
+    display: inline-block;  
+    margin: 15px auto;  
+    padding: 8px 15px;  
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
+    font-size: 14px;  
+    color: #fff;  
+    border: 2px solid #fff;  
+    border-radius: 8px;  
+    background: transparent;  
+    cursor: pointer;  
+    box-shadow: 0 0 10px #fff, inset 0 0 10px #fff;  
+    transition: all 0.2s ease;  
+  }  
+  .neon-button:hover {  
+    box-shadow: 0 0 20px #fff, inset 0 0 20px #fff;  
+    background: rgba(255,255,255,0.1);  
+  }  
 
-    /* Cuadro grande de mensaje/neón que aparecerá tras ocultar */  
-    .message-box {  
-      display: none; /* Se muestra solo en modo oculto */  
-      margin: 30px auto;  
-      padding: 20px;  
-      max-width: 600px;  
-      border-radius: 15px;  
-      background: linear-gradient(45deg, #00fff2, #00f2ff, #00fff2);  
-      background-size: 600% 600%;  
-      animation: gradientBorder 3s ease infinite, pulse 2s infinite;  
+  /* Cuadro grande de mensaje/neón que aparecerá tras ocultar */  
+  .message-box {  
+    display: none; /* Se mostrará solo cuando clickees el botón */  
+    margin: 30px auto;  
+    padding: 20px;  
+    max-width: 600px;  
+    border-radius: 15px;  
+    background: linear-gradient(45deg, #00fff2, #00f2ff, #00fff2);  
+    background-size: 600% 600%;  
+    animation: gradientBorder 3s ease infinite, pulse 2s infinite;  
+    box-shadow: 0 0 20px #00fff2aa, inset 0 0 10px #00fff2aa;  
+    border: 3px solid transparent;  
+    text-align: center;  
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
+    color: white;  
+    font-size: 1.8em;  
+  }  
+
+  @keyframes gradientBorder {  
+    0% { background-position: 0% 50%; }  
+    50% { background-position: 100% 50%; }  
+    100% { background-position: 0% 50%; }  
+  }  
+  @keyframes pulse {  
+    0%, 100% {  
       box-shadow: 0 0 20px #00fff2aa, inset 0 0 10px #00fff2aa;  
-      border: 3px solid transparent;  
-      text-align: center;  
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-      color: white;  
-      font-size: 1.8em;  
     }  
+    50% {  
+      box-shadow: 0 0 40px #00fff2ff, inset 0 0 15px #00fff2ff;  
+    }  
+  }  
 
-    /* Animaciones para el cuadro */  
-    @keyframes gradientBorder {  
-      0% { background-position: 0% 50%; }  
-      50% { background-position: 100% 50%; }  
-      100% { background-position: 0% 50%; }  
-    }  
-    @keyframes pulse {  
-      0%, 100% {  
-        box-shadow: 0 0 20px #00fff2aa, inset 0 0 10px #00fff2aa;  
-      }  
-      50% {  
-        box-shadow: 0 0 40px #00fff2ff, inset 0 0 15px #00fff2ff;  
-      }  
-    }  
+  /* Estilo del buscador */  
+  .search-container {  
+    text-align: center;  
+    margin-bottom: 30px;  
+  }  
+  input[type="text"] {  
+    padding: 12px 20px;  
+    width: 70%;  
+    font-size: 18px;  
+    border-radius: 10px;  
+    border: none;  
+    outline: none;  
+    background: #1c1c1c;  
+    color: white;  
+    box-shadow: 0 0 10px #FFFFFF;  
+  }  
 
-    /* Estilo del buscador */  
-    .search-container {  
-      text-align: center;  
-      margin-bottom: 30px;  
-    }  
-    
-    input[type="text"] {  
-      padding: 12px 20px;  
-      width: 70%;  
-      font-size: 18px;  
-      border-radius: 10px;  
-      border: none;  
-      outline: none;  
-      background: #1c1c1c; 
-    }  
-
-    .grid {  
-      display: grid;  
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));  
-      gap: 25px;  
-      padding: 20px;  
-      max-width: 1200px;  
-      margin: auto;  
-    }  
-
-    .game {  
-      background: rgba(255, 255, 255, 0.05);  
-      border-radius: 15px;  
-      overflow: hidden;  
-      text-align: center;  
-      box-shadow: 0 0 15px #00fff255;  
-      transition: transform 0.2s, box-shadow 0.2s;  
-    }  
-
-    .game:hover {  
-      transform: scale(1.05);  
-      box-shadow: 0 0 25px #00fff2aa;  
-    }  
-
-    .game img {  
-      width: 100%;  
-      height: 150px;  
-      object-fit: cover;  
+  /* Grid de juegos */  
+  .
       border-bottom: 2px solid #00fff2;  
     }  
 
